[gd_scene load_steps=2 format=3 uid="uid://marketplace_ui"]

[ext_resource type="Script" path="res://scripts/ui/marketplace_ui.gd" id="1_marketplace"]

[node name="MarketplaceUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_marketplace")

[node name="Background" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="ColorRect" type="ColorRect" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)
mouse_filter = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -280.0
offset_right = 170.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Header" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "üñ•Ô∏è SOLANA MARKETPLACE"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/Header"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "X"

[node name="WalletInfo" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="WalletLabel" type="Label" parent="Panel/VBoxContainer/WalletInfo"]
layout_mode = 2
text = "Wallet: Not Connected"

[node name="BalanceLabel" type="Label" parent="Panel/VBoxContainer/WalletInfo"]
layout_mode = 2
text = "Balance: 0.00 SOL"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buy" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Buy"]
layout_mode = 2
text = "üìä Market Listings:"

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/TabContainer/Buy"]
layout_mode = 2
size_flags_vertical = 3

[node name="ListingsContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item1" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer/Item1"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚ö´ lkC √ó 1000"

[node name="PriceLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer/Item1"]
layout_mode = 2
text = "0.01 SOL"

[node name="BuyButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer/Item1"]
layout_mode = 2
text = "BUY"

[node name="Item2" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer/Item2"]
layout_mode = 2
size_flags_horizontal = 3
text = "üîµ lkO √ó 500"

[node name="PriceLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer/Item2"]
layout_mode = 2
text = "0.02 SOL"

[node name="BuyButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer/Item2"]
layout_mode = 2
text = "BUY"

[node name="Item3" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer/Item3"]
layout_mode = 2
size_flags_horizontal = 3
text = "üî¥ CO‚ÇÇ √ó 100"

[node name="PriceLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer/Item3"]
layout_mode = 2
text = "0.05 SOL"

[node name="BuyButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Buy/ScrollContainer/ListingsContainer/Item3"]
layout_mode = 2
text = "BUY"

[node name="Sell" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Sell"]
layout_mode = 2
text = "Your Inventory:"

[node name="InventoryContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sell"]
layout_mode = 2
size_flags_vertical = 3

[node name="EmptyLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Sell/InventoryContainer"]
layout_mode = 2
text = "No items to sell"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer/TabContainer/Sell"]
layout_mode = 2

[node name="SellPanel" type="Panel" parent="Panel/VBoxContainer/TabContainer/Sell"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sell/SellPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ItemLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Sell/SellPanel/VBoxContainer"]
layout_mode = 2
text = "‚ö´ lkC √ó 1,247"

[node name="AmountContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sell/SellPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Sell/SellPanel/VBoxContainer/AmountContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Amount:"

[node name="AmountInput" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Sell/SellPanel/VBoxContainer/AmountContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "100"
placeholder_text = "Amount"

[node name="PriceContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sell/SellPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Sell/SellPanel/VBoxContainer/PriceContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Price:"

[node name="PriceInput" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Sell/SellPanel/VBoxContainer/PriceContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "0.001"
placeholder_text = "SOL"

[node name="ListButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Sell/SellPanel/VBoxContainer"]
layout_mode = 2
text = "LIST FOR SALE"

[node name="Get alSOL" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL"]
layout_mode = 2
text = "üí∞ Get alSOL (In-Game Currency)"
horizontal_alignment = 1

[node name="InfoLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL"]
layout_mode = 2
text = "alSOL is backed 1:1 by real SOL and used for all marketplace transactions."
autowrap_mode = 3

[node name="HSeparator1" type="HSeparator" parent="Panel/VBoxContainer/TabContainer/Get alSOL"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer/TabContainer/Get alSOL"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="SOLPanel" type="Panel" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/SOLPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionTitle" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/SOLPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Option 1: Buy with SOL"

[node name="Description" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/SOLPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "1 SOL = 1 alSOL (1:1 ratio)"

[node name="AmountContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/SOLPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/SOLPanel/VBoxContainer/AmountContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Amount (SOL):"

[node name="SOLInput" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/SOLPanel/VBoxContainer/AmountContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "1.0"

[node name="ResultLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/SOLPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
text = "‚Üí You get: 0.000 alSOL"

[node name="BuySOLButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/SOLPanel/VBoxContainer"]
layout_mode = 2
text = "BUY WITH SOL"

[node name="Spacer" type="Control" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LKCPanel" type="Panel" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionTitle" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Option 2: Buy with LKC"

[node name="Description" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "1,000,000 LKC = 1 alSOL"

[node name="AmountContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer/AmountContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Amount (LKC):"

[node name="LKCInput" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer/AmountContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
placeholder_text = "100000"

[node name="ResultLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
text = "‚Üí You get: 0.000 alSOL"

[node name="LimitPanel" type="Panel" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer/LimitPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="LimitTitle" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer/LimitPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.96, 0.62, 0.04, 1)
text = "‚ö†Ô∏è Weekly Limit: 1.000 alSOL"

[node name="ProgressBar" type="ProgressBar" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer/LimitPanel/VBoxContainer"]
layout_mode = 2
max_value = 1.0
value = 0.45
show_percentage = false

[node name="UsageLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer/LimitPanel/VBoxContainer"]
layout_mode = 2
text = "Used: 0.000 / 1.000 alSOL"
horizontal_alignment = 1

[node name="ResetLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer/LimitPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Resets in: 5d 3h 22m"
horizontal_alignment = 1

[node name="BuyLKCButton" type="Button" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer"]
layout_mode = 2
text = "BUY WITH LKC"

[node name="MinLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Get alSOL/ScrollContainer/VBoxContainer/LKCPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "Min: 0.001 alSOL (1,000 LKC)"
horizontal_alignment = 1

[node name="Mint" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Mint"]
layout_mode = 2
text = "Create new tokens/NFTs:"

[node name="InfoLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Mint"]
layout_mode = 2
text = "Mint your discovered elements and items as tokens or NFTs on Solana."
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer/TabContainer/Mint"]
layout_mode = 2

[node name="MintableItems" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Mint"]
layout_mode = 2
size_flags_vertical = 3

[node name="EmptyLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Mint/MintableItems"]
layout_mode = 2
text = "No items ready to mint
(Discover new elements first!)"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Background" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Header/CloseButton" to="." method="_on_close_button_pressed"]
